# MPI_API

./: CMakeLists.txt  prod-cons_async.cpp  prod-cons_test.cpp
data/: config_network.txt  config_prod-cons.txt
src/: myMPI.cpp  myMPI.h
